# RustMetricsServer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
benches/: benchmark.rs
src/: main.rs
